// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themed component tests renders themed View correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#F2F2F2",
      },
      undefined,
    ]
  }
/>
`;

exports[`Themed component tests renders themed text correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#333333",
      },
      undefined,
    ]
  }
/>
`;
